--- a/alb-ingress-connect-nginx.yaml
+++ b/alb-ingress-connect-nginx.yaml
@@ -1,20 +1,22 @@
-apiVersion: extensions/v1beta1 
-kind: Ingress 
-metadata: 
-  annotations: 
-    #alb.ingress.kubernetes.io/certificate-arn: <CERTIFICATE_ARN> 
-    alb.ingress.kubernetes.io/healthcheck-path: /healthz 
-    alb.ingress.kubernetes.io/scheme: internet-facing 
-    alb.ingress.kubernetes.io/target-type: ip 
-    alb.ingress.kubernetes.io/subnets: <subnets> 
-    kubernetes.io/ingress.class: alb  
-  name: alb-ingress-connect-nginx 
-  namespace: kube-system 
-spec: 
-  rules: 
-    - http: 
-        paths: 
-          - backend: 
-              serviceName: nginx-ingress-controller 
-              servicePort: 8080 
-            path: /* 
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: alb-ingress-connect-nginx
+  namespace: kube-system
+  annotations:
+    kubernetes.io/ingress.class: alb
+    #alb.ingress.kubernetes.io/subnets: subnet-0b46ceb647f0761be, subnet-095bb785d06d63597
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/healthcheck-path: '/'
+
+  labels:
+    app: nginx
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /*
+            backend:
+              serviceName: "ingress-nginx-controller"
+              servicePort: 80
